página carregando os dados

--- a/app/resources/page_sample.html
+++ b/app/resources/page_sample.html
@@ -1,7 +1,7 @@
 <!--[main]-->
 
 <div class="panel panel-default">
-    <div class="panel-heading"><div class="panel-title">Panel group title</div> </div>
+    <div class="panel-heading"><div class="panel-title">{$title}</div> </div>
     <div class="panel-body">
     
         <blockquote>
@@ -10,6 +10,6 @@
         </blockquote>
 
     </div>
-    <div class="panel-footer">Panel group footer</div>
+    <div class="panel-footer">{$footer}</div>
 </div>
 <!--[/main]-->
