--- a/app/resources/work-view-list.html
+++ b/app/resources/work-view-list.html
@@ -17,7 +17,7 @@
                     <div class="advisor">
                         <span class="text-to-name">Orientadores:</span><br>
                         <!--[advisors]-->
-                        <span class="text-to-name">{$advisors}</span><br>
+                        <span class="text-to-name"><sup>{$i}</sup>{$advisors}</span><br>
                         <!--[/advisors]-->
                     </div>
                 </div>
@@ -42,10 +42,10 @@
             </div>
         </div>
         <div class="panel-footer">
-            <a href="index.php?class=ReviewWork&method=onAprove" class="btn btn-sm btn-success" style="background-color: #3d8d3d; margin-right: 10px;">
+            <a href="index.php?class=ReviewWork&method=onApproveClick&work_id={$work_id}" class="btn btn-sm btn-success" style="background-color: #3d8d3d; margin-right: 10px;">
                 <span><i class="fa fa-check" style="padding-right: 4px;"></i>Aprovar</span>
             </a>            
-            <a href="index.php?class=ReviewWork&method=onDisaprove" class="btn btn-sm btn-primary" style="background-color: hsl(347, 89%, 58%);">
+            <a href="index.php?class=ReviewWork&method=onDisapproveClick&work_id={$work_id}" class="btn btn-sm btn-primary" style="background-color: hsl(347, 89%, 58%);">
                 <span><i class="fa fa-trash" style="padding-right:4px"></i>Reprovar</span>
             </a>
         </div>
