--- a/app/resources/work-view-list.html
+++ b/app/resources/work-view-list.html
@@ -36,7 +36,7 @@
                 <div class="container_line_2">
                     <div class="file">
                         <div class="ilustation"></div>
-                        <p>Ver: <a href="{$file}">{$file-label}</a></p>
+                        <p>Ver: <a href="index.php?class=ReviewWork&method=onFileClick&work_id={$work_id}">{$file-label}</a></p>
                     </div>
                 </div>
             </div>
