--- a/app/resources/work-approved-list.html
+++ b/app/resources/work-approved-list.html
@@ -37,7 +37,8 @@
                 <div class="container_line_2">
                     <div class="file">
                         <div class="ilustation"></div>
-                        <p>Ver: <a href="{$file}">{$file-label}</a></p>
+                        <p>Ver: <a href="index.php?class=ListApprovedWorks&method=onFileClick&work_id={$work_id}">{$file-label}</a></p>
+
                     </div>
                 </div>
             </div>
