--- a/app/resources/system_notification_view.html
+++ b/app/resources/system_notification_view.html
@@ -40,17 +40,16 @@
         </div>
     </div>
 
+    
     <div class="panel-footer" style="width: 100%">
-        <!--[check]-->
-        <a generator="adianti" href="index.php?class=SystemNotificationFormView&method=onExecuteAction&id={$id}" class="btn btn-sm btn-primary">
+        <!--<a generator="adianti" href="index.php?class=SystemNotificationFormView&method=onExecuteAction&id={$id}" class="btn btn-sm btn-primary">
             <i class="{$icon}" style="padding-right:4px"></i>
             {$action_label}
-        </a>
-        <!--[/check]-->
+        </a>-->
         <a generator="adianti" href="index.php?class=SystemNotificationList" class="btn btn-default">
             <i class="fa fa-table blue" style="padding-right:4px"></i>
             _t{Back to the listing}
         </a>
-    </div>
+    </div> 
 </div>
 <!--[/main]-->
