--- a/app/resources/work-approved-list.html
+++ b/app/resources/work-approved-list.html
@@ -7,7 +7,6 @@
         </div>
         <div class="container-wrapper">
             <div class="container-main">
-                
                 <div class="container_line_1">
                     <div class="autor">
                         <span class="text-to-name">Autores:</span><br>
@@ -18,7 +17,7 @@
                     <div class="advisor">
                         <span class="text-to-name">Orientadores:</span><br>
                         <!--[advisors]-->
-                        <span class="text-to-name"><sup>{$i}</sup>{$advisors}</span><br>
+                        <span class="text-to-name">{$advisors}</span><br>
                         <!--[/advisors]-->
                     </div>
                 </div>
