--- a/app/resources/work-view-list.html
+++ b/app/resources/work-view-list.html
@@ -17,7 +17,7 @@
                     <div class="advisor">
                         <span class="text-to-name">Orientadores:</span><br>
                         <!--[advisors]-->
-                        <span class="text-to-name"><sup>{$i}</sup>{$advisors}</span><br>
+                        <span class="text-to-name">{$advisors}</span><br>
                         <!--[/advisors]-->
                     </div>
                 </div>
