--- a/app/resources/work-view-list.html
+++ b/app/resources/work-view-list.html
@@ -45,7 +45,10 @@
             <a href="index.php?class=ReviewWork&method=onApproveClick&work_id={$work_id}" class="btn btn-sm btn-success" style="background-color: #3d8d3d; margin-right: 10px;">
                 <span><i class="fa fa-check" style="padding-right: 4px;"></i>Aprovar</span>
             </a>            
-            <a href="index.php?class=ReviewWork&method=onDisapproveClick&work_id={$work_id}" class="btn btn-sm btn-primary" style="background-color: hsl(347, 89%, 58%);">
+            <a href="index.php?class=ReviewWork&method=onReviewClick&work_id={$work_id}" class="btn btn-sm btn-primary" style="background-color: hsl(347, 89%, 58%);  margin-right: 10px">
+                <span><i class="fa fa-edit" style="padding-right:4px">Revisar</i></span>
+            </a>
+            <a href="index.php?class=ReviewWork&method=onDisapproveClick&work_id={$work_id}" class="btn btn-sm btn-fail" style="background-color: hsl(347, 89%, 58%);">
                 <span><i class="fa fa-trash" style="padding-right:4px"></i>Reprovar</span>
             </a>
         </div>
