--- a/app/resources/work-view-list.html
+++ b/app/resources/work-view-list.html
@@ -36,22 +36,28 @@
                 <div class="container_line_2">
                     <div class="file">
                         <div class="ilustation"></div>
-                        <p>Ver: <a href="index.php?class=ReviewWork&method=onFileClick&work_id={$work_id}">{$file-label}</a></p>
+                        <p>Ver: <a
+                                href="index.php?class=ReviewWork&method=onFileClick&work_id={$work_id}">{$file-label}</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="panel-footer">
-            <a href="index.php?class=ReviewWork&method=onApproveClick&work_id={$work_id}" class="btn btn-sm btn-success" style="background-color: #3d8d3d; margin-right: 10px;">
+            <a href="index.php?class=ReviewWork&method=onApproveClick&work_id={$work_id}" class="btn btn-sm btn-success"
+                style="background-color: #3d8d3d; margin-right: 10px;">
                 <span><i class="fa fa-check" style="padding-right: 4px;"></i>Aprovar</span>
-            </a>            
-            <a href="index.php?class=ReviewWork&method=onReviewClick&work_id={$work_id}" class="btn btn-sm btn-primary" style="background-color: hsl(347, 89%, 58%);  margin-right: 10px">
+            </a>
+            <a href="index.php?class=ReviewWork&method=onReviewClick&work_id={$work_id}" class="btn btn-sm btn-primary"
+                style="background-color: hsl(347, 89%, 58%);  margin-right: 10px">
                 <span><i class="fa fa-edit" style="padding-right:4px">Revisar</i></span>
             </a>
-            <a href="index.php?class=ReviewWork&method=onDisapproveClick&work_id={$work_id}" class="btn btn-sm btn-fail" style="background-color: hsl(347, 89%, 58%);">
+            <a href="index.php?class=ReviewWork&method=onDisapproveClick&work_id={$work_id}" class="btn btn-sm btn-fail"
+                style="background-color: hsl(347, 89%, 58%);">
                 <span><i class="fa fa-trash" style="padding-right:4px"></i>Reprovar</span>
             </a>
         </div>
     </div>
 
-    <!--[/main]-->
+</div>
+<!--[/main]-->
